# offline-assistant-app

./: .gitignore  .gitmodules  README.md  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: model.gguf
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/volodapatik/offlineassistant/: MainActivity.kt  MainActivity.kt.bak
app/src/main/java/com/volodapatik/offlineassistant/engine/: AssistantEngine.kt  EngineConfig.kt  EngineProvider.kt  LlamaEngine.kt  LlamaNative.kt  SimpleLocalEngine.kt
app/src/main/java/com/volodapatik/offlineassistant/model/: ChatMessage.kt
app/src/main/java/com/volodapatik/offlineassistant/ui/: ChatAdapter.kt
app/src/main/res/drawable/: bubble_assistant.xml  bubble_user.xml  button_neon.xml  ic_launcher_foreground.xml  input_bg.xml
app/src/main/res/layout/: activity_main.xml  item_message.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: colors.xml  themes.xml
